2007-10-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/OpCode.cs: Change OpCode from struct to class
	to avoid copying everything everytime.

2007-09-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Adapt patch from Carlo Kok  <ck@remobjects.com>.
		Properly read unicode string constants.

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Adapt patch from Carlo Kok  <ck@remobjects.com>.
		For some MS assemblies, the security declaration contains
		one zero byte.

2007-09-24  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs: after a FullLoad, the symbol
	reader is not needed anymore.

2007-09-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Adapt a patch from Ivan <ivanjh@gmail.com>.
		Fix cloning of the This parameter.

2007-09-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/TypeSpec.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Deal with custom mods on typespecs.

2007-09-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs: some 64bits assemblies
	have a strange header without import tables.

2007-09-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericContext.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/DefaultImporter.cs:
		Better handling of generic instances of references, where
		the number of generic parameters is not known.

2007-09-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodDefinition: add Is** methods for MethodImplAttributes.

2007-09-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Adapt a patch by Ewout Prangsma <ewout@tallapplications.com>.
		Cache the typespec tokens instead of the typespec themselves
		because GenericParameters are somethimes considered as typespecs.

2007-08-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs